--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -6,7 +6,7 @@
 # Appearance
 appearance:
   mode: light
-  color: emerald
+  color: own
 
 # SEO
 marketing:
@@ -33,8 +33,8 @@ header:
     align: "right"
     blox: "navbar"
     fixed_to_top: true
-    show_search: true
-    show_theme_chooser: true
+    show_search: false
+    show_theme_chooser: false
     logo:
       text: "Kelly Chiu"
 
@@ -50,7 +50,7 @@ footer:
 
 # Localization
 locale:
-  date_format: 'Jan 2, 2006'
+  date_format: 'Oct 21, 2024'
   time_format: '3:04 PM'
 
 # Site features
