--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -35,7 +35,7 @@ header:
     blox: "navbar"
     fixed_to_top: true
     show_search: false
-    show_theme_chooser: false
+    show_theme_chooser: true
     logo:
       text: "Kelly Chiu"
 
